# enwiro

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  renovate.json
.github/workflows/: binary-release.yaml  ci.yaml  deploy-docs.yaml  release-plz.yaml
docs/: README.md  astro.config.mjs  creating-a-cookbook.md  i3-workspace-rebalancing.md  package.json  pnpm-lock.yaml
docs/adr/: 0001-project-level-config.md  0002-daemon-ipc-architecture.md  0003-pattern-recipes.md  0004-recipe-grammar-and-composed-environments.md  README.md  template.md
docs/src/content/docs/: activating-workspaces.md  development-setup.md  index.mdx  launching-apps.md
docs/src/content/docs/adapters/: creating-an-adapter.md  index.md
docs/src/content/docs/adapters/available-adapters/: i3wm.md  tmux.md
docs/src/content/docs/bridges/: creating-a-bridge.md  index.md
docs/src/content/docs/cookbooks/: index.md
docs/src/content/docs/cookbooks/available-cookbooks/: git.md
enw-gui/: Cargo.toml  build.rs
enw-gui/src/: api.rs  board.rs  main.rs
enw-gui/web/: .gitignore  package-lock.json  package.json  vite.config.ts
enw-gui/web/src/: App.tsx  index.css  keyboard.ts  main.tsx  store.ts
enw-gui/web/src/client/: index.ts  types.gen.ts
enw-gui/web/src/client/@tanstack/: react-query.gen.ts
enw-gui/web/src/components/ui/: badge.tsx  card.tsx
enwiro/: CHANGELOG.md  Cargo.toml  README.md
enwiro-adapter-i3wm/: CHANGELOG.md  Cargo.toml  README.md
enwiro-adapter-i3wm/proptest-regressions/: main.txt
enwiro-adapter-i3wm/proptest-regressions/rebalance/: regression.txt
enwiro-adapter-i3wm/src/: main.rs
enwiro-adapter-i3wm/src/rebalance/: compile.rs  derive.rs  i3_model.rs  i3_op.rs  mod.rs  optimize.rs  plan.rs  regression.rs  spec.rs  types.rs
enwiro-adapter-i3wm/src/rebalance/optative/: mod.rs  reconcile.rs
enwiro-adapter-tmux/: CHANGELOG.md  Cargo.toml  README.md
enwiro-adapter-tmux/src/: main.rs
enwiro-bridge-activitywatch/: CHANGELOG.md  Cargo.toml  README.md
enwiro-bridge-activitywatch/src/: main.rs
enwiro-bridge-i3-activitywatch/: CHANGELOG.md  Cargo.toml  README.md
enwiro-bridge-i3-activitywatch/src/: main.rs
enwiro-bridge-rofi/: CHANGELOG.md  Cargo.toml  README.md
enwiro-bridge-rofi/proptest-regressions/: main.txt
enwiro-bridge-rofi/src/: main.rs
enwiro-bridge-rofi/tests/: stderr_propagation.rs
enwiro-browser-extension/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
enwiro-browser-extension/public/: manifest.json
enwiro-browser-extension/src/: background.ts  protocol.ts  router.test.ts  router.ts  urlpattern.d.ts
enwiro-cookbook-chezmoi/: CHANGELOG.md  Cargo.toml  README.md
enwiro-cookbook-chezmoi/src/: main.rs
enwiro-cookbook-git/: CHANGELOG.md  Cargo.toml  README.md
enwiro-cookbook-git/src/: detect.rs  lib.rs  main.rs
enwiro-cookbook-github/: CHANGELOG.md  Cargo.toml
enwiro-cookbook-github/src/: main.rs
enwiro-cookbook-obsidian/: CHANGELOG.md  Cargo.toml  README.md
enwiro-cookbook-obsidian/src/: main.rs
enwiro-daemon/: CHANGELOG.md  Cargo.toml
enwiro-daemon/src/: config.rs  launch.rs  lib.rs  main.rs  meta.rs  proxy.rs  rpc.rs  scoring.rs
enwiro-daemon/tests/: rpc_roundtrip.rs
enwiro-garnish-just/: CHANGELOG.md  Cargo.toml
enwiro-garnish-just/src/: main.rs
enwiro-garnish-submodules/: CHANGELOG.md  Cargo.toml
enwiro-garnish-submodules/src/: main.rs
enwiro-gui/: CHANGELOG.md  Cargo.toml
enwiro-gui/src/: board.rs
enwiro-gui/web/: README.md  index.html  openapi-ts.config.ts  package.json
enwiro-gui/web/src/: App.tsx  capabilityToken.ts
enwiro-gui/web/src/client/: sdk.gen.ts
enwiro-gui/web/src/components/ui/: button.tsx  dropdown-menu.tsx
enwiro-logging/: Cargo.toml
enwiro-sdk/: CHANGELOG.md  Cargo.toml
enwiro-sdk/src/: adapter.rs  bridge.rs  browser.rs  capability.rs  cli.rs  client.rs  cookbook.rs  dropin.rs  external_paths.rs  fs.rs  garnish.rs  gear.rs  git.rs  goal.rs  lib.rs  listen.rs  logging.rs  metadata.rs  pattern.rs  plugin.rs  process.rs  recipe_expr.rs  recipe_pattern.rs  rpc.rs  status.rs  test_helpers.rs  url_rule.rs
enwiro-sdk/src/browser/: framing.rs  install.rs
enwiro-sdk/src/config/: mod.rs
enwiro-sdk/src/rpc/: client.rs
enwiro-sdk/tests/: gear_integration.rs
enwiro-sdk/tests/support/: fake_plugin.rs
enwiro/proptest-regressions/commands/: ls.txt
enwiro/src/: client.rs  config.rs  confirm.rs  context.rs  daemon.rs  environments.rs  main.rs  notifier.rs  plugin.rs  test_utils.rs  usage_stats.rs
enwiro/src/commands/: activate.rs  adapter.rs  browser.rs  env_info.rs  gear.rs  goal.rs  kanban.rs  list_all.rs  list_environments.rs  ls.rs  mark.rs  mod.rs  prep.rs  rm.rs  run.rs  run_gear.rs  show_path.rs  wrap.rs
enwiro/src/gear/: mod.rs
enwiro/tests/: binary_name.rs
src/: environments.rs  main.rs  test_utils.rs
src/commands/: list_environments.rs  mod.rs  show_path.rs
