[workspace]
resolver = "3"
members = [
    "enwiro",
    "enwiro-adapter-i3wm",
    "enwiro-cookbook-chezmoi",
    "enwiro-cookbook-git",
]

[workspace.package]
repository = "https://github.com/kantord/enwiro"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
