[workspace]
resolver = "3"
members = [
    "enwiro",
    "enwiro-adapter-i3wm",
    "enwiro-bridge-rofi",
    "enwiro-cookbook-chezmoi",
    "enwiro-cookbook-git",
    "enwiro-logging",
]

[workspace.package]
repository = "https://github.com/kantord/enwiro"

[workspace.dependencies]
enwiro-logging = { path = "enwiro-logging" }
home = "0.5.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
