[package]
name = "enw-gui"
version = "0.0.0"
edition = "2024"
description = "Local web GUI for enwiro: a single binary that serves an embedded React SPA to the browser"
license = "GPL-3.0-or-later"
repository.workspace = true
# Not published to crates.io: the binary embeds the Vite build from web/dist,
# which cannot be reproduced from a crates.io tarball.
publish = false

[[bin]]
name = "enw-gui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
rust-embed = "8"
mime_guess = "2"
open = "5"
enwiro-sdk.workspace = true
enwiro-daemon.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
tower-http = { version = "0.7.0", features = ["cors"] }
