[package]
name = "enwiro-adapter-i3wm"
version = "0.1.40"
edition = "2024"
description = "i3wm adapter for enwiro"
license = "GPL-3.0-or-later"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Tags are `<crate>-v<version>` (release-plz's workspace default), which
# doesn't match binstall's built-in URL guesses, so pkg-url is explicit here.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWQowPNA2jR6/GBAZNkd5d6by7LwOPBdEwK1NptQjAPGrB8UhUUHHP8T"

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
enwiro-sdk = { workspace = true, features = ["cli"] }
i3ipc-types = "0.16.0"
optative = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.37.0"
tokio-i3ipc = "0.16.0"
tokio-stream = "0.1"
toml = "1.0"
tracing.workspace = true
which = "8"

[dev-dependencies]
proptest = "=1.11.0"
rstest = "=0.26.1"
tempfile = "=3.27.0"
