[package]
name = "enwiro-adapter-tmux"
version = "0.1.18"
edition = "2024"
description = "tmux adapter for enwiro"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
enwiro-sdk.workspace = true
serde_json = "1"
tracing.workspace = true
