[package]
name = "enwiro-bridge-activitywatch"
version = "0.1.2"
edition = "2024"
description = "ActivityWatch bridge for enwiro: reports the active enwiro env as aw-server heartbeats"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
enwiro-sdk.workspace = true
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["macros", "rt", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
