[package]
name = "enwiro-bridge-activitywatch"
version = "0.1.5"
edition = "2024"
description = "ActivityWatch bridge for enwiro: reports the active enwiro env as aw-server heartbeats"
license = "GPL-3.0-or-later"
repository.workspace = true

# Tags are `<crate>-v<version>` (release-plz's workspace default), which
# doesn't match binstall's built-in URL guesses, so pkg-url is explicit here.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWQowPNA2jR6/GBAZNkd5d6by7LwOPBdEwK1NptQjAPGrB8UhUUHHP8T"

[dependencies]
anyhow = "1"
enwiro-sdk.workspace = true
hostname = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["macros", "rt", "time"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
