[package]
name = "enwiro-bridge-i3-activitywatch"
version = "0.1.1"
edition = "2024"
description = "ActivityWatch bridge for enwiro: reports the focused i3 workspace's enwiro env as aw-server heartbeats"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
hostname = "0.4"
i3ipc-types = "0.16.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.37.0", features = ["macros", "rt", "time"] }
tokio-i3ipc = "0.16.0"
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = { version = "3", features = ["json"] }
