[package]
name = "enwiro-bridge-rofi"
version = "0.1.5"
edition = "2024"
description = "Rofi bridge for enwiro"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
enwiro-logging.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
