[package]
name = "enwiro-cookbook-chezmoi"
version = "0.1.1"
edition = "2024"
description = "Chezmoi cookbook for enwiro"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
enwiro-logging.workspace = true
tracing.workspace = true
