[package]
name = "enwiro-cookbook-git"
version = "0.1.1"
edition = "2021"
description = "i3wm cookbook for git"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
serde = "1.0.197"
confy = "1.0.0"
serde_derive = "1.0.197"
git2 = "0.18.3"

