[package]
name = "enwiro-cookbook-git"
version = "0.1.5"
edition = "2024"
description = "i3wm cookbook for git"
license = "GPL-3.0-or-later"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
serde = "1.0.197"
confy = "2.0.0"
serde_derive = "1.0.197"
enwiro-logging.workspace = true
git2 = "0.20.0"
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
