[package]
name = "enwiro-cookbook-git"
version = "0.1.29"
edition = "2024"
description = "i3wm cookbook for git"
license = "GPL-3.0-or-later"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Tags are `<crate>-v<version>` (release-plz's workspace default), which
# doesn't match binstall's built-in URL guesses, so pkg-url is explicit here.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWQowPNA2jR6/GBAZNkd5d6by7LwOPBdEwK1NptQjAPGrB8UhUUHHP8T"

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
serde = "1.0.197"
serde_json = "1"
serde_derive = "1.0.197"
enwiro-sdk = { workspace = true, features = ["git", "cli"] }
git2 = "0.21.0"
tracing.workspace = true
dirs = "6"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tempfile = "=3.27.0"
