[package]
name = "enwiro-cookbook-github"
version = "0.1.19"
edition = "2024"
description = "GitHub PR cookbook for enwiro"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1"
enwiro-sdk.workspace = true
tracing.workspace = true
dirs = "6"
sha2 = "0.11"
hex = "0.4"
git2 = "0.21.0"
glob = "0.3.1"
chrono = "0.4.43"

[dev-dependencies]
proptest = "1"
tempfile = "3"
