[package]
name = "enwiro-cookbook-obsidian"
version = "0.1.5"
edition = "2024"
description = "Obsidian vault cookbook for enwiro"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
enwiro-sdk.workspace = true
home.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing.workspace = true
which = "8"
