[package]
name = "enwiro-daemon"
version = "0.0.12"
edition = "2024"
description = "Background daemon for enwiro: refreshes the recipe cache and forwards workspace switch events"
license = "GPL-3.0-or-later"
repository.workspace = true

[[bin]]
name = "enwiro-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
dirs = "6"
enwiro-sdk.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
home.workspace = true
jsonrpsee = { version = "=0.26", default-features = false, features = ["server-core", "macros"] }
libc = "0.2"
optative-process-pool = "0.0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
system-idle-time = "1.0.4"
tokio = { version = "1.37.0", default-features = false, features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing.workspace = true

[dev-dependencies]
proptest = "1"
enwiro-sdk = { workspace = true, features = ["test-helpers"] }
filetime = "0.2"
tempfile = "3.25.0"
