[package]
name = "enwiro-daemon"
version = "0.0.19"
edition = "2024"
description = "Background daemon for enwiro: refreshes the recipe cache and forwards workspace switch events"
license = "GPL-3.0-or-later"
repository.workspace = true

[[bin]]
name = "enwiro-daemon"
path = "src/main.rs"

[features]
# Experimental Stage 0 of the isolation layer (issue #540): the daemon's
# `launch.resolve` runs a command inside a prebuilt OCI image when one exists
# for the env. Off by default. Build/test with `--features container-wrap`.
# Also carries the experimental host-side Claude auth proxy (`proxy.rs`).
container-wrap = [
    "dep:which",
    "dep:bytes",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:reqwest",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
dirs = "6"
enwiro-sdk.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
home.workspace = true
jsonrpsee = { version = "=0.26", default-features = false, features = ["server-core", "macros"] }
libc = "0.2"
optative-process-pool = "0.0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
system-idle-time = "1.0.4"
tokio = { version = "1.37.0", default-features = false, features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time", "process", "signal"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
tracing.workspace = true
which = { version = "8", optional = true }
# Host-side Claude auth proxy (issue #540, behind `container-wrap`).
bytes = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1", default-features = false, features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"], optional = true }

[dev-dependencies]
proptest = "=1.11.0"
enwiro-sdk = { workspace = true, features = ["test-helpers"] }
filetime = "=0.2.29"
tempfile = "=3.27.0"
