[package]
name = "enwiro-gui"
version = "0.1.1"
edition = "2024"
description = "Local web GUI for enwiro: a single binary that serves an embedded React SPA to the browser"
license = "GPL-3.0-or-later"
repository.workspace = true
# web/dist is gitignored but must ship in the crates.io tarball so that
# `cargo install enwiro-gui` needs no JS toolchain: CI builds the SPA right
# before `cargo publish`, and this include list (which overrides gitignore
# for packaging) snapshots the built assets into the package.
include = ["src/**", "build.rs", "web/dist/**"]

[[bin]]
name = "enw-gui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
rust-embed = "8"
mime_guess = "2"
open = "5"
enwiro-sdk.workspace = true
enwiro-daemon.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
tower-http = { version = "0.7.0", features = ["cors"] }
