[package]
name = "enwiro-gui"
version = "0.1.5"
edition = "2024"
description = "Local web GUI for enwiro: a single binary that serves an embedded React SPA to the browser"
license = "GPL-3.0-or-later"
repository.workspace = true
# web/dist is gitignored but must ship in the crates.io tarball so that
# `cargo install enwiro-gui` needs no JS toolchain: CI builds the SPA right
# before `cargo publish`, and this include list (which overrides gitignore
# for packaging) snapshots the built assets into the package.
include = ["src/**", "build.rs", "web/dist/**"]

# Tags are `<crate>-v<version>` (release-plz's workspace default), which
# doesn't match binstall's built-in URL guesses, so pkg-url is explicit here.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWQowPNA2jR6/GBAZNkd5d6by7LwOPBdEwK1NptQjAPGrB8UhUUHHP8T"

[[bin]]
name = "enw-gui"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net"] }
rust-embed = "8"
mime_guess = "2"
open = "5"
enwiro-sdk.workspace = true
enwiro-daemon.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
tower-http = { version = "0.7.0", features = ["cors"] }
