[package]
name = "enwiro-sdk"
version = "0.5.0"
edition = "2024"
description = "Shared SDK for enwiro plugin authors: logging, gear schema, plugin protocol types"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
config = { version = "0.15", default-features = false, features = ["toml"] }
dirs = "6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
home.workspace = true
jsonrpsee = { version = "=0.26", default-features = false, features = ["macros", "async-client", "server-core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum_macros = "0.28.0"
thiserror = "2"
tokio = { version = "1.37.0", default-features = false, features = ["net", "io-util", "rt", "macros", "sync"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
toml = "1"
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
test-helpers = []

[dev-dependencies]
rstest = "0.26.0"
tempfile = "3.25.0"

[[bin]]
name = "test-fake-plugin"
path = "tests/support/fake_plugin.rs"
test = false
bench = false
doc = false
