[package]
name = "enwiro-sdk"
version = "0.8.1"
edition = "2024"
description = "Shared SDK for enwiro plugin authors: logging, gear schema, plugin protocol types"
license = "GPL-3.0-or-later"
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
config = { version = "0.15", default-features = false, features = ["toml"] }
dirs = "6"
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
home.workspace = true
http = "1"
jsonrpsee = { version = "=0.26", default-features = false, features = ["macros", "async-client", "server-core"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum_macros = "0.28.0"
subtle = "2"
thiserror = "2"
tokio = { version = "1.37.0", default-features = false, features = ["net", "io-util", "rt", "macros", "sync"] }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
toml = "1"
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
test-helpers = []

[dev-dependencies]
proptest = "=1.11.0"
rstest = "=0.26.1"
sanitize-filename = "=0.6.0"
tempfile = "=3.27.0"

[[bin]]
name = "test-fake-plugin"
path = "tests/support/fake_plugin.rs"
test = false
bench = false
doc = false
