[package]
name = "enwiro"
version = "0.3.32"
edition = "2024"
description = "Simplify your workflow with dedicated project environments for each workspace in your window manager"
license = "GPL-3.0-or-later"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "enw"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
confy = "2.0.0"
enwiro-daemon.workspace = true
enwiro-sdk.workspace = true
home.workspace = true
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27.0", features = ["derive"] }
strum_macros = "0.27.0"
notify-rust = "4"
tracing.workspace = true
dirs = "6"

[dev-dependencies]
assertables = "9.0.0"
enwiro-sdk = { workspace = true, features = ["test-helpers"] }
rstest = "0.26.0"
tempfile = "3.25.0"
