[package]
name = "enwiro"
version = "0.3.60"
edition = "2024"
description = "Simplify your workflow with dedicated project environments for each workspace in your window manager"
license = "GPL-3.0-or-later"
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Tags are `<crate>-v<version>` (release-plz's workspace default), which
# doesn't match binstall's built-in URL guesses, so pkg-url is explicit here.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.signing]
algorithm = "minisign"
pubkey = "RWQowPNA2jR6/GBAZNkd5d6by7LwOPBdEwK1NptQjAPGrB8UhUUHHP8T"

[[bin]]
name = "enw"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.16"
enwiro-daemon.workspace = true
enwiro-sdk.workspace = true
home.workspace = true
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", default-features = false, features = ["rt"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
notify-rust = "4"
tracing.workspace = true
dirs = "6"
dialoguer = { version = "0.12", default-features = false }
ratatui = "0.30"
crossterm = "0.29"
libc = "0.2.186"

[dev-dependencies]
assertables = "=10.1.0"
proptest = "=1.11.0"
enwiro-sdk = { workspace = true, features = ["test-helpers"] }
rstest = "=0.26.1"
tempfile = "=3.27.0"
